--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -93,3 +93,4 @@ src/gz bearstech-fso-unstable-om-gta02 http://shr.bearstech.com/fso-unstable/ipk
 If you want to add a link, it would be nice to enforce a standard format of these feeds so that they can be browsed automatically.
 
 [[Category:Advanced End User]]
+[[Category:Distributions]]
