Thumbnailed images to improve the visibility on low resolutions.

--- a/Specialized_USB_cables.mw
+++ b/Specialized_USB_cables.mw
@@ -15,7 +15,7 @@ Alternately, an adapter capable of connecting two type A plugs will allow attach
 === Ready-made mini type B plug to a type A jack cable ===
 
 You can buy [[http://www.jaykang.com/usbafetousbm1.html this]] ready-made USB A-Type Female to USB Mini-B Type 5 Pin Male Adapter.
-[[Image:jaykang_usbafetousbm1.jpg]]
+[[Image:jaykang_usbafetousbm1.jpg|thumb|none]]
 
 === How to make a mini type B plug to a type A jack cable ===
 
@@ -34,7 +34,7 @@ Construction instructions:
 === Ready-made type A jack to a type A jack adapter (gender changer) ===
 
 You can buy [[http://www.jaykang.com/usbtyfetotyf.html this]] ready-made USB Type A Female to Female Gender Changer.
-[[Image:jaykang_usbtyfetotyf.jpg]]
+[[Image:jaykang_usbtyfetotyf.jpg|thumb|none]]
 
 === How to make a type A jack to a type A jack adapter (gender changer) ===
 
@@ -42,7 +42,7 @@ This community provided instruction shows how to build an adapter from a USB soc
 
 Note that these instructions are provided in the hope that they are useful but without any warranty!
 
-[[Image:2-usb-receptables.jpg]]
+[[Image:2-usb-receptables.jpg|thumb|none]]
 
 :#Find an old motherboard with a set of two USB receptacles as shown above.
 :#Desolder this set of receptacles from the motherboard. This can be bit tricky but it is doable at least with a desoldering gun.
@@ -67,8 +67,10 @@ when freerunner acts as a device and
 when it acts as a host.
 :#At your own risk, switch freerunner to USB host mode and connect an USB device to the other receptacle of the adapter. Here's how the setup should look like:
 
-[[Image:Usb-gender-changer1.jpg]]
-[[Image:Usb-gender-changer2.jpg]]
+<gallery>
+Image:Usb-gender-changer1.jpg
+Image:Usb-gender-changer2.jpg
+</gallery>
 
 ==== Compatibility ====
 
