Category changes: -Information, -Help, +Wiki Editing

--- a/Openmoko_Wiki_Editing_Guidelines.mw
+++ b/Openmoko_Wiki_Editing_Guidelines.mw
@@ -149,5 +149,4 @@ When you create a new page, it's a good idea to add it to your watchlist. Check 
 
 {{Languages|Openmoko_Wiki_Editing_Guidelines}}
 
-[[Category:Help]]
-[[Category:Information]]
+[[Category:Wiki Editing]]
