Category changes: -Community, +Wiki Editing

--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -25,4 +25,4 @@ Then some people move to larger contributions, perhaps fixing a broken reference
 
 '''Explore !''' The 'toolbox' in the left column allows to browse the wiki faster. For example [[Special:Specialpages]] - List and find various content. For the full picture of Openmoko Wiki, please visit the [[Openmoko Wiki Official Index Page|Openmoko Wiki Official Index Page]].
 
-[[Category:Community]]
+[[Category:Wiki Editing]]
