/* Not Working SIM pics */

--- a/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
+++ b/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
@@ -131,4 +131,8 @@ EVENT: Signal Quality: 31
 
 [[Image:Jean_20080715_orange_back_notworking.JPG.gif]]
 
+* O2 Germany
+
+[[Image:O2-sim-nonworking-tesa.jpg]]
+
 [[Category:Information]]
