Category changes: -Help, +Wiki Editing/de

--- a/Openmoko_Wiki_Editing_Guidelines%2Fde.mw
+++ b/Openmoko_Wiki_Editing_Guidelines%2Fde.mw
@@ -16,4 +16,4 @@ Unsere Openmoko Wiki Bearbeitungsrichtlinien sind gedacht, um unsere Benutzer in
 ## Stell bitte sicher dass ein aussenstehender Benutzer klar unterscheiden kann zwischen aktuellen Features und "interessante und theoretische Pläne die einmal verwirklicht werden könnten" :)
 {{Languages|Openmoko_Wiki_Editing_Guidelines}}
 
-[[Category:Help]]
+[[Category:Wiki Editing/de]]
