Category changes: -Help, +Wiki Editing/fr

--- a/Openmoko_Wiki_Editing_Guidelines%2Ffr.mw
+++ b/Openmoko_Wiki_Editing_Guidelines%2Ffr.mw
@@ -31,4 +31,4 @@ Pour plus d'aide concernant les catégories, la documentation suivant est dispon
 
 {{Languages|Openmoko_Wiki_Editing_Guidelines}}
 
-[[Category:Help]]
+[[Category:Wiki Editing/fr]]
