--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -248,4 +248,4 @@ When a requested Wiki Issue is voted for not to be done, it must be moved here, 
 * '''Don't translate the wiki - rejected''' proposed by [[User:Minime|Minime]] August 2007, moved to rejected by [[User:Kempelen|Kempelen]] August 2008: the Documentation Team looks to support the idea.
 * '''Use namespaces to separate user-oriented and developper-oriented content'''. Assuming the default namespace is user-oriented that would exclude developper-oriented pages from searches (unless the user ticks the box, but who does ?). And it can't be done purely in the wiki, it needs admin time. Better to use categories and a prefix in the page name (like BlendeWiki).
 
-[[Category:Help]]
+[[Category:Wiki Editing]]
