Category changes: -Help, +Wiki Editing/zh cn

--- a/Openmoko_Wiki_Editing_Guidelines%2Fzh_cn.mw
+++ b/Openmoko_Wiki_Editing_Guidelines%2Fzh_cn.mw
@@ -17,4 +17,4 @@ Our Openmoko Wiki Editing Guidelines are meant to assist our users in editing th
 ## Always make sure that an outside user can clearly distinguish between the actual feature set of the device, and "interesting theoretical plans of what one could do if he had time" :)
 {{Languages|Openmoko_Wiki_Editing_Guidelines}}
 
-[[Category:Help]]
+[[Category:Wiki Editing/zh cn]]
