Link to template list, -Tempalates category, +Wiki Editing

--- a/Templates.mw
+++ b/Templates.mw
@@ -239,6 +239,10 @@ Available status table rows:
 * [[Sample Native-Stylus Application]]
 * [[Sample Panel Application]]
 
+== See also ==
+
+[http://wiki.openmoko.org/index.php?title=Special:Allpages&namespace=10 List of all templates]
+
 {{Languages|Templates}}
 
-[[Category:Templates| ]]
+[[Category:Wiki Editing]]
