/* Pages proposed for deletion */ voted

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -59,33 +59,33 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |-
 | [[Roadmap]] || Emtpy bascially || [[User:Kempelen|Kempelen]], [[User:Marko Knöbl|Marko Knöbl]]
 |-
-|[[Why Not QT]] and [[Talk:Why Not QT]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
+|[[Why Not QT]] and [[Talk:Why Not QT]] || outdated || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-|[[Application]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
+|[[Application]] || outdated || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-|[[Community Member of the Week]] || not used anymore since April || [[User:Marko Knöbl|Marko Knöbl]]
+|[[Community Member of the Week]] || not used anymore since April || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-|[[Community nominees for GTA02 P0]] || outdated, not needed anymore || [[User:Marko Knöbl|Marko Knöbl]]
+|[[Community nominees for GTA02 P0]] || outdated, not needed anymore || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-|[[Config Options]] || little content, not maintained || [[User:Marko Knöbl|Marko Knöbl]]
+|[[Config Options]] || little content, not maintained || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-|[[Neo 1973 Phase 1]] || outdated, unfinished page || [[User:Marko Knöbl|Marko Knöbl]]
+|[[Neo 1973 Phase 1]] || outdated, unfinished page || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-|[[Developer preview]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
+|[[Developer preview]] || outdated || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
-|[[ETel]] and [[Talk:ETel]] || is about a past event || [[User:Marko Knöbl|Marko Knöbl]]
+|[[ETel]] and [[Talk:ETel]] || is about a past event || [[User:Marko Knöbl|Marko Knöbl]] || [[User:Kempelen|Kempelen]] (moved to Event category that's for past events too)
 |-
 |[[Finger Scrolling]] and [[Talk:Finger Scrolling]] || Was only used in Om 2007.2 || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Finger Toolbar]] and [[Talk:Finger Toolbar]] || Was only used in Om 2007.2 || [[User:Marko Knöbl|Marko Knöbl]]
 |-
-|[[GPS Navigation]] and [[Talk:GPS Navigation]] || is already implemented: see [[GPS Applications]] || [[User:Marko Knöbl|Marko Knöbl]]
+|[[GPS Navigation]] and [[Talk:GPS Navigation]] || is already implemented: see [[GPS Applications]] || [[User:Marko Knöbl|Marko Knöbl]] || [[User:Kempelen|Kempelen]] Need to merge use cases first.
 |-
-|[[GTA02v5]] || only contains links to deleted pages || [[User:Marko Knöbl|Marko Knöbl]]
+|[[GTA02v5]] || only contains links to deleted pages || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |-
 |[[Guitar Tuning/de]] || english page was already deleted || [[User:Marko Knöbl|Marko Knöbl]]
 |-
-|[[Hear Me FIC]], [[Talk:Hear Me FIC]] and [[Hear Me FIC/it]] || no new suggestions since July 2007 || [[User:Marko Knöbl|Marko Knöbl]]
+|[[Hear Me FIC]], [[Talk:Hear Me FIC]] and [[Hear Me FIC/it]] || no new suggestions since July 2007 || [[User:Marko Knöbl|Marko Knöbl]], [[User:Kempelen|Kempelen]]
 |}
 
 === Pages that especially need work === 
