--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -1094,7 +1094,13 @@ Support for monitor mode (rfmon mode) so it can be used as a wifi diagnostic too
 
 HSDPA support and the like, so that users can connect directly with the internet with G3/G4 mobile service providers at speeds at or above 3.6 Mb/s.
 
+
 == Other ==
+
+== Android Emulation ===
+
+The ability to run google android applications on the openmoko, this would enable any application written for android to work on the openmoko, it appears all the hardware is there it appears to run as an android phone but using the openmoko operating system.
+
 
 === Auto Update ===
 
