--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -1097,7 +1097,7 @@ HSDPA support and the like, so that users can connect directly with the internet
 
 == Other ==
 
-== Android Emulation ===
+=== Android Emulation ===
 
 The ability to run google android applications on the openmoko, this would enable any application written for android to work on the openmoko, it appears all the hardware is there it appears to run as an android phone but using the openmoko operating system.
 
