/* Lists now implemented as categories */ changed to vote format.

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -118,11 +118,25 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 [[User:MinhHaDuong|MinhHaDuong]] 10:47, 24 August 2008 (UTC)
 
 ===Lists now implemented as categories===
+
 These Pages are now implemented as categories, thus the unmaintaned pages could be removed. - Kempelen
-* [[Advanced_End-user]]: use [[:Category:User]] instead (Actually User is a too general name, thus new one should be created maybe [[User:Kempelen|Kempelen]])
-* [[Basic_End-user]]: use [[:Category:User]] instead
-* [[System_Developer]]: use [[:Category:System_Developers]] instead
-* [[Application_Developer]]: use [[:Category:Application_Developer]] instead
+
+{| border=1
+!List to remove
+!Category to use
+!Yes votes
+!No votes
+|-
+| [[Advanced_End-user]] || [[:Category:Advanced End User]] || [[User:Kempelen|Kempelen]]
+|-
+| [[Basic_End-user]]|| [[:Category:Basic End User]] || [[User:Kempelen|Kempelen]]
+|-
+| [[System_Developer]] || [[:Category:System_Developers]] || [[User:Kempelen|Kempelen]]
+|-
+| [[Application_Developer]] || [[:Category:Application_Developer]] || [[User:Kempelen|Kempelen]]
+|-
+|}
+
 Note that as a matter of principle, lists and categories are two complementary ways to organize information. We should strive to have both excellent lists AND categories in the wiki.
 
 ===Too general category names===
