warning about nameless proposals/comments.

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -5,6 +5,8 @@ When adding an issue please
 * Provide a reason
 * Provide your name as vote for the action to be taken (you can automatically enter your username by typing "<nowiki>~~~</nowiki>")
 
+{{Warning|Comments without name might be deleted without consideration. We may need to ask for more information before implementing a proposal. Thanks for understanding.}}
+
 Accepted and implemented requests should be deleted. Rejected requests should be moved to the bottom of the page to avoid requesting them again.
 
 ==Wiki Pages==
