/* Category structure */ structure update

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -180,16 +180,16 @@ Names are votes. See also: Too general category names above.
 Top level categories.
 
 * [[:Category:Categories]] - container for top level categories.
-** [[:Category:Community]]
+** [[:Category:Community]] - (OK: [[User:Kempelen|Kempelen]])
 ** [[:Category:Documentation]] (Remove: [[User:Kempelen|Kempelen]])
-** [[:Category:Hardware]]
+** [[:Category:Hardware]] - (OK: [[User:Kempelen|Kempelen]])
 ** [[:Category:Information]] - (Remove: [[User:Kempelen|Kempelen]])
 ** [[:Category:Openmoko]] - (Remove: [[User:Kempelen|Kempelen]])
 ** [[:Category:Policy]] - Developer policies (OK: [[User:Kempelen|Kempelen]]) 
 ** [[:Category:Software]] - (OK: [[User:Kempelen|Kempelen]])
 ** [[:Category:Technical]] - (Remove: [[User:Kempelen|Kempelen]]) 
 ** [[:Category:ToDo]] - The TODO template adds here (OK: [[User:Kempelen|Kempelen]])
-** [[:Category:User's Manual]] - 
+** [[:Category:User's Manual]] - Empty.
 
 Subcategories of Software. Looks well designed:
 
