/* Navigation templates */ yes vote.

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -227,6 +227,8 @@ http://en.wikipedia.org/wiki/Wikipedia:Categories,_lists,_and_series_boxes
 
 [http://lists.openmoko.org/pipermail/documentation/2008-August/000405.html First discussion in the mailing list] (Note: in the middle of a thread about left navboxes)
 
+* '''Yes votes''': [[User:Kempelen|Kempelen]] (For real wikipedia like navigation templates at the bottom, not at TOC position, we should move this section to editing guidelines as soon as template implementation improves a bit. Do not delete this please!)
+
 == DolfjeBot1 proposals ==
 Their is a bot on the openmoko wiki that's controlled by [[User:Dolfje]]. If you have tasks for the bot, please put them [[User:DolfjeBot1|here]].
 
