Category changes: -Information, -Openmoko, -Neo FreeRunner Hardware, +Basic End User

--- a/Support.mw
+++ b/Support.mw
@@ -80,6 +80,4 @@ Bug/Development track
 
 Application projects source forge
 
-[[Category:Openmoko]]
-[[Category:Information]]
-[[Category:Neo FreeRunner Hardware]]
+[[Category:Basic End User]]
