Category changes: -Information, +Community

--- a/External_Feeds.mw
+++ b/External_Feeds.mw
@@ -25,4 +25,4 @@ There are a number of blogs written by people in the Openmoko community that are
 
 |}
 
-[[Category:Information]]
+[[Category:Community]]
