--- a/External_Feeds%2Fit.mw
+++ b/External_Feeds%2Fit.mw
@@ -25,4 +25,4 @@ Ci sono molti blog scritti nella Comunità di Openmoko che non sono parte del si
 
 {{Languages|External Feeds}}
 
-[[Category:Information]]
+[[Category:Community/it]]
