Category changes: -Information, +Basic End User

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -412,5 +412,5 @@ A: the answer for the display used in GTA01 and GTA02 is '2'
 =Historical=
 The Neo1973 was last available in Febuary 2008. See [Ne
 
-[[Category:Information]]
+[[Category:Basic End User]]
 [[Category:FAQ]]
