Category changes: -Information, +Basic End User/de

--- a/FAQ%2Fde.mw
+++ b/FAQ%2Fde.mw
@@ -319,4 +319,4 @@ A: Sie dienen der Kapazit&auml;ts-/Induktivit&auml;tsmessung der Dielektrizit&au
 
 {{Languages|FAQ}}
 
-[[Category:Information]]
+[[Category:Basic End User/de]]
