/* Ideas for the application name */  added name and voted

--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -108,13 +108,14 @@ after that you will need to restart the framework (kill the process and start it
 
 ==Ideas for the application name==
 
-*MokoRemote
-*BlueRemote
+*MokoRemote (white_gecko [-])
+*BlueRemote (white_gecko [-])
 *<font color="#00FF00">ReMoko</font> or ReMoto (maybe some character that's a combination of t and k, at least in the splash/logo)
-*Mokomote
+*Mokomote (white_gecko [+])
 *Mokomo (shorter) -- + 1 vote
-*FreeMote (Builds on freerunner and remote) -- +1 vote
+*FreeMote (Builds on freerunner and remote) -- +1 vote (white_gecko [-])
 *MokoKeyMouse (It can be a bit too long, so you can make it shorter as: MKM)
+*Bluemote or BlueMote
 
 *'''Add your idea here'''
 
