Category changes: -Information, +Basic End User/fr

--- a/FAQ%2Ffr.mw
+++ b/FAQ%2Ffr.mw
@@ -347,4 +347,4 @@ Alternatively you can use the [http://www.google.com/coop/cse?cx=017507431580478
 
 A:No.
 
-[[Category:Information]]
+[[Category:Basic End User/fr]]
