Category changes: -Information, +Basic End User/it

--- a/FAQ%2Fit.mw
+++ b/FAQ%2Fit.mw
@@ -323,4 +323,4 @@ Altrimenti puoi usare [http://www.google.it/coop/cse?cx=017507431580478583395%3A
 
 {{Languages|FAQ}}
 
-[[Category:Information]]
+[[Category:Basic End User/it]]
