Category changes: -Information, +Neo FreeRunner Hardware

--- a/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
+++ b/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
@@ -135,4 +135,4 @@ EVENT: Signal Quality: 31
 
 [[Image:O2-sim-nonworking-tesa.jpg]]
 
-[[Category:Information]]
+[[Category:Neo FreeRunner Hardware]]
