avoid duplication; use the categories

--- a/Openmoko_Wiki_Editing_Guidelines.mw
+++ b/Openmoko_Wiki_Editing_Guidelines.mw
@@ -9,6 +9,8 @@ Our Openmoko Wiki Editing Guidelines are meant to assist our users in editing th
 
 == Rules ==
 
+# If you see an error, correct it!
+# If you see a page that is mis-categorized, correct it!
 # If you're adding information (especially pages) about the hardware, keep in mind that the Neo 1973 is only one of the various devices that will run Openmoko. Thus,
 ## Do not create generic pages like "Battery", rather use "Neo 1973 Battery".
 ## If it makes sense to have generic pages, use per-device sections and make sure you always link to the Neo 1973 section from other Neo 1973 specific pages.
@@ -16,6 +18,8 @@ Our Openmoko Wiki Editing Guidelines are meant to assist our users in editing th
 # The wiki is primarily meant to contain factual information on actual project software, hardware, even though parts might still be under development. Thus,
 ## If you're adding information about wishlist items (or even more imaginary things), please clearly mark them with a "Wishlist:" prefix in the page title.
 ## Always make sure that an outside user can clearly distinguish between the actual feature set of the device, and "interesting theoretical plans of what one could do if he had time" :)
+# Avoid duplication! Multiple sources often get out of sync, leading to confusion and mis-information. If you have new information see if it is an appropriate addition to an existing page. If you do feel that a new page is in order, remove duplicated information from the existing page and consolidate in your new page.
+# Use categories! We are trying to use categories as a way to help newcomers find what they want. Proper categorization of your new page or any existing pages will help bring your valuable information to the eyes of the user, and will help raise the level of usefulness of the entire wiki
 
 == Adding a new page ==
 
