/* Interessenten der Gruppe */

--- a/Openmoko_Local_Groups:_Munich.mw
+++ b/Openmoko_Local_Groups:_Munich.mw
@@ -126,7 +126,7 @@ Interessenten können sich hier eintragen. Wenns Interesse gibt, dann treffen wi
 * iPhone-artiges UI basteln
 |München/Moosach/Borstei
 |
-|demnächst GTA02
+|GTA02v5
 |v3
 |-
 |[[User:Calestyo|Cálestyo Nótendil]]
