--- a/FAQ.mw
+++ b/FAQ.mw
@@ -478,7 +478,7 @@ Alternatively you can use the [http://www.google.com/coop/cse?cx=018430699993342
 A: the answer for the display used in GTA01 and GTA02 is '2'
 
 =Historical=
-The Neo1973 was last available in Febuary 2008. See [Ne
+The Neo1973 was last available in Febuary 2008. 
 
 [[Category:Basic End User]]
 [[Category:FAQ]]
