--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -115,7 +115,7 @@ after that you will need to restart the framework (kill the process and start it
 *Mokomo (shorter) -- + 1 vote
 *FreeMote (Builds on freerunner and remote) -- +1 vote (white_gecko [-])
 *MokoKeyMouse (It can be a bit too long, so you can make it shorter as: MKM)
-*Bluemote or BlueMote
+*Bluemote or BlueMote [+1]
 
 *'''Add your idea here'''
 
