/* Part I (precompiled software) */

--- a/Host-based_development_with_Xoo_and_Xephyr.mw
+++ b/Host-based_development_with_Xoo_and_Xephyr.mw
@@ -24,8 +24,7 @@ You need to install some software that is usually not present on a desktop syste
 * libecal1.2-dev
 * libnotify-dev
 * libpulse-dev
-* libecal1.2-dev
-* libcurl4-openssl-dev (or libcurl4-gnutls-dev) (Ubuntu specific names?)
+* libcurl4-openssl-dev (or libcurl4-gnutls-dev)
 * matchbox-window-manager
 * matchbox-keyboard
 * pulseaudio
