*Empty MediaWiki Message*

--- a/External_Feeds.mw
+++ b/External_Feeds.mw
@@ -22,7 +22,8 @@ There are a number of blogs written by people in the Openmoko community that are
 |-
 |http://openmoko-fr.org  || [[User:swap38|swap38]]          || Communauté francophone sur openmoko (blog, forum, wiki) || http://openmoko-fr.org/blog/index.php?feed/rss2
 |-
-
+|http://openmoko.opendevice.org/  || [[User:arteqw]]         || Polish Openmoko site (wiki, forum and blogs)                       || http://openmoko.opendevice.org/
+|-
 |}
 
 [[Category:Community]]
