--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -46,6 +46,8 @@ after that you will need to restart the framework (kill the process and start it
 ** Go to the bluetooth preferences and choose 'Add a new device';
 ** Choose the neo (default name is  'BlueZ (0)') and choose 'no password';
 
+* Mac: any idea how to bypass the password panel?
+
 ===Using custom keys===
 * The keys bellow don't exist by default in the Illume/qtopia keyboard's, to add the keys to a profile you have to write it.
   Allowed Keys:
