/* The Category:ideas */ Add signature

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -163,13 +163,14 @@ These end up in mixed content. They could be removed and content migrated to mor
 
 ===The Category:ideas===
 Problem 1:
-Many pages have   Wishlist:   in the title. This syntax is potentially confusing because there is no Wishlist:  namespace. Should we suggest a mass rename from "Wishlist:(.*)" to "Ideas - \1" ? Or really create a  Wishlist:  namespace for vaporware ?
+Many pages have   Wishlist:   in the title. This syntax is potentially confusing because there is no Wishlist:  namespace. I suggest a mass rename from "Wishlist:(.*)" to "Wishlist/\1" ?
 
 Problem 2:
 A significant minority of pages in the "Category:ideas" are missing the prefix in the title.
 
 Problem 3:
 There are two templates, { { Wishlist } } and { { Unimplemented } } . Is that unnecessary redundancy, or is there a subtle distinction .
+[[User:MinhHaDuong|MinhHaDuong]] 20:23, 30 August 2008 (UTC)
 
 === Category structure ===
 
