--- a/Idle_Hands.mw
+++ b/Idle_Hands.mw
@@ -44,4 +44,4 @@ The application will know our location (work, home, etc.) by comparing your curr
 * ''List very common questions with their answers here. Everything else should use the Wiki's discussion feature.''
 
 [[Category:Applications]]
-[[Category:Guides]]
+[[Category:Ideas]]
