keyboard for finger mode (and polish language)

--- a/Switching_Keyboards_on_Om_2007.2.mw
+++ b/Switching_Keyboards_on_Om_2007.2.mw
@@ -98,6 +98,62 @@ to close it down, and at least get the matchbox keyboard going again.  You shoul
 
 To make sure you don't end up removing all your keyboard input capability, you can create a new .desktop file in /usr/share/applications/ for starting and closing the keyboard.  This is pretty easy to do by copying and editing an existing .desktop file.
 
+
+==Modified Matchbox Keyboard: finger friendly==
+There is a modified Matchbox keyboard available on http://wiki.harnir.net/openmoko:keyboard-compressed .
+The keyboard can be controlled without stylus and also includes everything needed for terminal-use.
+
+==== Installation ====
+
+Download one of the files below, uncompress and put it in ''/usr/share/matchbox-keyboard/'' on your Neo FreeRunner:
+
+  * [http://wiki.harnir.net/_media/openmoko:file:keyboard-compressed.xml.gz?id=openmoko%3Akeyboard-compressed&cache=cache general keyboard layout]
+  * [http://wiki.harnir.net/_media/openmoko:file:keyboard-compressed-pl.xml.gz?id=openmoko%3Akeyboard-compressed&cache=cache Polish keyboard layout]
+
+If you want, you can change the name of the file to ''keyboard.xml'' or make a symlink to it. This way, ''matchbox-keyboard'' will use it automatically after next restart of the X server.
+
+Note: I've installed keyboard layout from [[http://atariland.net/~dreilly/openmoko/]] before making this one. Please inform me if my layout works without these modifications, or if they are needed.
+
+==== How does it look like? ====
+
+=== Default layout ===
+[[Image:Matchbox-keyboard-general.png]]
+  * ^[ - Escape
+  * ⇑ - Shift
+  * ⌫ - Backspace
+  * ⇔ - switch layout to the alternate
+  * ^C - Control
+  * ◆ - write a digit or symbol
+  * ↵ - Enter
+
+
+=== Default Polish layout ===
+[[Image:Matchbox-keyboard-pl.png]]
+
+=== Shifted Polish layout ===
+
+[[Image:Matchbox-keyboard-pl-caps.png]]
+
+  * ⇒ - Tab
+  * ⇑⇑ - Caps Lock
+
+If you use general layout, special characters from the top row stay the same in the shifted layout.
+
+=== Digits and symbols ===
+
+[[Image:Matchbox-keyboard-symbols.png]]
+
+When you select a desired key in this layout, keyboard immediately returns back to the alphabet keys.
+
+=== Alternate kayboard layout ===
+
+[[Image:Matchbox-keyboard-alternate.png]]
+
+This layout is "persistent" - when you select a key it won't disappear by itself - you need to use the <key>⇔</key> key in the bottom-left corner of the keyboard to return to the default keyboard.
+
+Alternate layout is meant for easy writing of medium or long numbers (decimal or hex, hence the A-F letters), IP and MAC addresses, RGB values, etc. You can find here also direction keys (↑, ↓, ←, →) for easier movement operations.
+
+
 ==Switch back to the original Openmoko keypad==
 
 If you for whatever reason need to switch back, here are the steps:
