See also section added.

--- a/Openmoko_Wiki_Editing_Guidelines.mw
+++ b/Openmoko_Wiki_Editing_Guidelines.mw
@@ -164,6 +164,13 @@ See also: [http://en.wikipedia.org/wiki/Wikipedia:Categories,_lists,_and_navigat
 
 When you create a new page, it's a good idea to add it to your watchlist. Check your watchlist regularly to keep up with the evolution of the pages you have created, help the new editors of your page.
 
+== See also ==
+
+See also sections are for linking to other '''related articles in this Wiki'''. For external links please create an '''External links''' section instead. We encourage adding see also links to pages.
+
+* [[Edit Wiki]]
+* [[Wiki Issues]]
+
 
 {{Languages|Openmoko_Wiki_Editing_Guidelines}}
 
