Killing list paged: rejected.

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -16,6 +16,7 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 * [[AGPSD]] (Needs new GPS info)
 * [[AR6K]] (Needs more info)
 * [[GTA02 partitions]]: seems to be about the GTA01; could someone with a GTA02 please correct the partition sizes and names?
+* [[Advanced_End-user]], [[Basic_End-user]], [[System_Developer]], [[Application_Developer]]: These are not up to the standard we set for List Pages on [[Openmoko_Wiki_Editing_Guidelines#List_pages]] [[User:Kempelen|Kempelen]]
 
 ===Redundant Pages===
 * There are several pages concerning Openmoko compatible service providers:
@@ -121,25 +122,7 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 
 ===Lists now implemented as categories===
 
-These Pages are now implemented as categories, thus the unmaintaned pages could be removed. - Kempelen
-
-{| border=1
-!List to remove
-!Category to use
-!Yes votes
-!No votes
-|-
-| [[Advanced_End-user]] || [[:Category:Advanced End User]] || [[User:Kempelen|Kempelen]]
-|-
-| [[Basic_End-user]]|| [[:Category:Basic End User]] || [[User:Kempelen|Kempelen]]
-|-
-| [[System_Developer]] || [[:Category:System_Developers]] || [[User:Kempelen|Kempelen]]
-|-
-| [[Application_Developer]] || [[:Category:Application_Developer]] || [[User:Kempelen|Kempelen]]
-|-
-|}
-
-Note that as a matter of principle, lists and categories are two complementary ways to organize information. We should strive to have both excellent lists AND categories in the wiki.
+Rejected. (Will remove this section soon.)
 
 ===Too general category names===
 
@@ -265,5 +248,6 @@ When a requested Wiki Issue is voted for not to be done, it must be moved here, 
 
 * '''Don't translate the wiki - rejected''' proposed by [[User:Minime|Minime]] August 2007, moved to rejected by [[User:Kempelen|Kempelen]] August 2008: the Documentation Team looks to support the idea.
 * '''Use namespaces to separate user-oriented and developper-oriented content'''. Assuming the default namespace is user-oriented that would exclude developper-oriented pages from searches (unless the user ticks the box, but who does ?). And it can't be done purely in the wiki, it needs admin time. Better to use categories and a prefix in the page name (like BlendeWiki). [[:User:MinhHaDuong|MinhHaDuong]]
+* '''Use category pages instead List Pages''' Good list pages are allowed and encouraged, as the documentation team today agreed on the mailing list. [[User:Kempelen|Kempelen]] 21:27, 30 August 2008 (UTC)
 
 [[Category:Wiki Editing]]
