--- a/Openmoko_Wiki_Editing_Guidelines.mw
+++ b/Openmoko_Wiki_Editing_Guidelines.mw
@@ -65,6 +65,19 @@ For more help on categories, please see [http://www.mediawiki.org/wiki/Help:Cate
 
 Please see available [[Templates]] and add them where necessary.
 
+=== Navigation templates ===
+
+Exemples: [[Template:Om_2008.8]], [[Template:OM2007.2]]
+
+These are most useful to present small sets of chronological or otherwise 
+well ordered information items. For example, it's obvious to offer navigation 
+templates between these articles:
+* Openmoko produced smartphones {GTA01 Neo 1973, GTA02 Neo FreeRunner, GTA 03 
+(speculative)}
+* Distributions {2007.1, 2007.2, 2008.8 ASU, 2008.9, FSO, SHR, Qtopia, Debian}
+
+In effect navigation templates create a subset of important pages presented sequentially. This corresponds more or less to a chapter in the user manual. We should not force them where they cannot create a CONSISTENT  forth-and-back navigation between a GROUP OF PAGES.
+
 == List pages ==
 
 List pages are manually maintained pages, which link to a certain set of articles. Their purpose is similar to category pages' automatic article listing, but they can provide advantages above the automatic lists, like sections, better formatting, sorting.
