/* Navigation templates */ Description moved to guidelines.

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -188,18 +188,8 @@ Basic End User and Advanced End User categories may need to be created instead U
 
 == Navigation templates ==
 
-Exemples: [[Template:Om_2008.8]], [[Template:OM2007.2]]
+(FYI Description moved to [[Openmoko_Wiki_Editing_Guidelines#Navigation_templates]], [[User:Kempelen|Kempelen]])
 
-These are most useful to present small sets of chronological or otherwise 
-well ordered information items. For example, it's obvious to offer navigation 
-templates between these articles:
-* Openmoko produced smartphones {GTA01 Neo 1973, GTA02 Neo FreeRunner, GTA 03 
-(speculative)}
-* Distributions {2007.1, 2007.2, 2008.8 ASU, 2008.9, FSO, SHR, Qtopia, Debian}
-
-In effect navigation templates create a subset of important pages presented sequentially. This corresponds more or less to a chapter in the user manual. We should not force them where they cannot create a CONSISTENT  forth-and-back navigation between a GROUP OF PAGES.
-
-=== Issues ===
 * The [[Distributions]] page feature a non-templated navigation box
 * We should name these templates distinctly. I suggest using a prefix like "NavBox:".
 * Visual design is by hand (not CSS), and not beautiful
