/* Navigation templates */ wikipedia link added

--- a/Openmoko_Wiki_Editing_Guidelines.mw
+++ b/Openmoko_Wiki_Editing_Guidelines.mw
@@ -78,6 +78,8 @@ templates between these articles:
 
 In effect navigation templates create a subset of important pages presented sequentially. This corresponds more or less to a chapter in the user manual. We should not force them where they cannot create a CONSISTENT  forth-and-back navigation between a GROUP OF PAGES.
 
+See also: http://en.wikipedia.org/wiki/Wikipedia:Navigation_templates
+
 == List pages ==
 
 List pages are manually maintained pages, which link to a certain set of articles. Their purpose is similar to category pages' automatic article listing, but they can provide advantages above the automatic lists, like sections, better formatting, sorting.
