--- a/Openmoko_Wiki_Editing_Guidelines.mw
+++ b/Openmoko_Wiki_Editing_Guidelines.mw
@@ -91,8 +91,7 @@ An index page is only justified if it gives value added to the reader by
 
 You are welcome to create and improve list pages which match these recommendations.
 
-See also: [http://en.wikipedia.org/wiki/Wikipedia:Categories,_lists,_and_navigation_templates Wikipedia about Categories,_lists,_and_navigation_templates]
-
+See also: http://en.wikipedia.org/wiki/Wikipedia:Categories,_lists,_and_navigation_templates
 
 == Style Sheet ==
 === A list of definitive spellings used throughout the site ===
