--- a/Basic_End-user.mw
+++ b/Basic_End-user.mw
@@ -12,4 +12,4 @@ In this section you will find information geared towards ordinary smart phone us
 * [[Other Resources]] - Other freely available general information
 {{Languages|Basic_End-user}}
 
-[[Category:User| ]]
+[[Category:Basic End User| ]]
