--- a/Basic_End-user%2Fzh_cn.mw
+++ b/Basic_End-user%2Fzh_cn.mw
@@ -7,4 +7,4 @@ In this section you will find information geared towards users that just wants t
 * [[Openmoko compatible cellphone providers]] - This is a breakdown of Openmoko-compatible providers around the world
 {{Languages|Basic_End-user}}
 
-[[Category:User| ]]
+[[Category:Basic End User/zh cn| ]]
