Category: -User, +Basic End User/it

--- a/Basic_End-user%2Fit.mw
+++ b/Basic_End-user%2Fit.mw
@@ -7,4 +7,4 @@ In questa sezione è possibile trovare informazioni incentrate sugli utenti che 
 * [[Openmoko compatible cellphone providers/it|Operatori telefonici compatibili con Openmoko]]: questa è una classificazione degli operatori compatibili con Openmoko in giro per il mondo
 {{Languages|Basic_End-user}}
 
-[[Category:User| ]]
+[[Category:Basic End User/it| ]]
