Category: -User, +Basic End User/es

--- a/Basic_End-user%2Fes.mw
+++ b/Basic_End-user%2Fes.mw
@@ -7,4 +7,4 @@ Es esta sección ud. encontrará información que guiará a los usuario que dese
 * [[Openmoko compatible cellphone providers/es]] - Esta es la lista de los proveedores compatibles con Openmoko alrededor del mundo (en español).
 {{Languages|Basic_End-user}}
 
-[[Category:User| ]]
+[[Category:Basic End User/es| ]]
