Category: -User, +Basic End User/ru

--- a/Basic_End-user%2Fru.mw
+++ b/Basic_End-user%2Fru.mw
@@ -8,4 +8,4 @@
 * [[Other Resources]] - Другая информация на всякие разные темы
 {{Languages|Basic_End-user}}
 
-[[Category:User| ]]
+[[Category:Basic End User/ru| ]]
