--- a/Basic_End-user%2Ffr.mw
+++ b/Basic_End-user%2Ffr.mw
@@ -7,4 +7,4 @@ Dans cette section vous trouverez les informations destinées aux utilisateurs q
 * [[Openmoko compatible cellphone providers|Réseaux cellulaires Moko-patibles]] - Une liste mondiale des fournisseurs d'accès compatibles (Moko-patible) avec le projet Openmoko
 {{Languages|Basic_End-user}}
 
-[[Category:User| ]]
+[[Category:Basic End User/fr| ]]
