Category: -User, +Basic End User/nl

--- a/Basic_End-user%2Fnl.mw
+++ b/Basic_End-user%2Fnl.mw
@@ -9,4 +9,4 @@ In dit onderdeel bevind zich informatie voor de gebruikers die hun smartphone wi
 * [[Other Resources]] - Andere vrij beschikbare informatiebronnen.
 {{Languages|Basic_End-user}}
 
-[[Category:User| ]]
+[[Category:Basic End User/nl| ]]
