Category: -User, +Basic End User/de

--- a/Basic_End-user%2Fde.mw
+++ b/Basic_End-user%2Fde.mw
@@ -8,4 +8,4 @@ In diesm Abschnitt finden Sie Informationen, die an den üblichen Benutzer geric
 * [[Other Resources]] - Andere kostenlos erhältliche, allgemeine Informationen
 {{Languages|Basic_End-user}}
 
-[[Category:User| ]]
+[[Category:Basic End User/de| ]]
