--- a/Wishlist%2FExtension_Framework.mw
+++ b/Wishlist%2FExtension_Framework.mw
@@ -81,4 +81,4 @@ There are a number of [[Wish List]] entries for which the extension framework co
 #[[Wish List#Outgoing black/white lists|Outgoing black/white lists]]
 #[[Wish List#Time-based blocking/unblocking of calls|Time-based blocking/unblocking of calls]]
 
-[[Category:Software Ideas]]
+[[Category:Software ideas]]
