--- a/Wishlist%2FGames.mw
+++ b/Wishlist%2FGames.mw
@@ -106,6 +106,4 @@ What is not possible without magic tricks / an external controller*:
 
 <nowiki>*</nowiki>Much of this could be accomplished with [http://wiki.openmoko.org/wiki/Wish_List#More.2FCustom_Input_Method_Widgets Custom Input Method Widgets] for the keyboard.
 
-[[Category:User]]
-[[Category:Ideas| ]]
-[[Category:Hardware ideas]]
+[[Category:Software ideas]]
