--- a/Wishlist%2FGo.mw
+++ b/Wishlist%2FGo.mw
@@ -1,4 +1,4 @@
-{{Unimplemented}}
+{{Wishlist}}
 A Go program that would allow start playing Go without even reading rules.
 Animations would 'explain' liberties and solidly connected units of
 stones by flashing them for a short time after move. Especially combined
@@ -16,6 +16,5 @@ Also maybe add online support using [http://www.dragongoserver.net/ Dragon Go Se
 
 Bdb - As author of pilotgone, I'm interested in doing some kind of go thing, collaborating or whatever,
 so please get in touch if you are starting something. ( [[Special:Emailuser/Bdb]] ) 
-[[Category:User]]
-[[Category:Ideas| ]]
+
 [[Category:Software ideas]]
