Category changes: -User, -Ideas, +Software Ideas

--- a/Wishlist%2FLiveUSB_distro.mw
+++ b/Wishlist%2FLiveUSB_distro.mw
@@ -189,7 +189,5 @@ The SabayonLinux distro offers a lot of [http://www.sabayonlinux.org/wiki/index.
 
 
 
-
-[[Category:User]]
-[[Category:Ideas| ]]
+[[Category:Software ideas]]
 [[Category:Hardware ideas]]
