--- a/Wishlist%2FNeoMidiTracker.mw
+++ b/Wishlist%2FNeoMidiTracker.mw
@@ -1,3 +1,5 @@
+{{Wishlist}}
+
 A wish for a developer to create a simple, multitrack, midi sequencer for use on the Neo1973. 
 
 ====Desired Features====
