Category changes: -User, -Ideas, +Software Ideas

--- a/Wishlist%2FAuto_Align_Map.mw
+++ b/Wishlist%2FAuto_Align_Map.mw
@@ -23,7 +23,5 @@ Consider the phone held vertical with the two sensor lined up above each other.
 
 If the phone is spun along the vertical axes, then the acceleration does not change at all, so you can't tell direction.
 
-
-[[Category:User]]
-[[Category:Ideas| ]]
 [[Category:Hardware ideas]]
+[[Category:Software ideas]]
