Category changes: -User, -Ideas, +{{Hardware Wishlist}}

--- a/Student_phone.mw
+++ b/Student_phone.mw
@@ -1,3 +1,5 @@
+{{Hardware Wishlist}}
+
 The student phone targets the student population.
 
 == Customer Profile ==
@@ -28,6 +30,3 @@ The student phone targets the student population.
 ** One-person games
 ** Scientific calculator
 ** Personal Exams Manager/Planner
-[[Category:User]]
-[[Category:Ideas| ]]
-[[Category:Hardware ideas]]
