Category changes: -User, -Ideas, +{{Wishlist}}

--- a/Proposal_for_context_management.mw
+++ b/Proposal_for_context_management.mw
@@ -1,3 +1,5 @@
+{{Wishlist}}
+
 The Context section of the new framework could be used to choose between a number of profiles that determine which services are running, the settings for outputs and what events will interrupt the current in-focus application and deliver outputs.  These profiles could be overridden by individual rules selected by the user.
 
 If 'context sensitive profiling' is turned on the phone checks the context regularly and changes the profile in use if required.  All profiles can of course be edited by the user and new profiles defined.  The profiles will have to be prioritised.
@@ -105,5 +107,3 @@ Method of tagging GPS co-ords to define "home" etc.
 
 
 I hope that this makes some kind of sense.
-[[Category:User]]
-[[Category:Ideas| ]]
