/* Template:Yes, Template:No, Template:Maybe, Template:Unknown */

--- a/Templates.mw
+++ b/Templates.mw
@@ -185,7 +185,7 @@ For tables with various featrure lists and others, where these values are possib
 !Neo 1973
 !FreeRunner
 |-
-|Feautre 1
+|Feature 1
 |{{Yes}}
 |{{No}}
 |-
