--- a/Modular_phone.mw
+++ b/Modular_phone.mw
@@ -1,3 +1,5 @@
+{{Hardware Wishlist}}
+
 A number of manufacturers produce modular components designed for embedded systems. Some of these components are suitable for a hobbyist to put together a modular phone. This page is intended as a starting-point for building an Openmoko compatible phone.
 
 The major problem with this approach is that the resultant phone tends to be larger than a normal phone.
@@ -53,6 +55,3 @@ Where relevant, all components listed have Linux kernel modules supplied by thei
 
 ==Other resources==
 [http://hbmobile.org Home Brew Mobile Phone Club] have a site devoted to build-it-yourself mobile phones, based upon Gumstix motherboards. They have schematics, case designs and details of suitable components from many sources.
-[[Category:User]]
-[[Category:Ideas| ]]
-[[Category:Hardware ideas]]
